[package]
name = "ghopher"
version = "0.1.0"
authors = ["Owen Platt <owen@owenplatt.com>"]
edition = "2018"

[dependencies]
august = "2.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
pretty_env_logger = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.3", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal"] }
